--- a/Views/TeachingAssistant/_PhongVanTA.cshtml
+++ b/Views/TeachingAssistant/_PhongVanTA.cshtml
@@ -234,7 +234,7 @@
                             </tr>
                             <tr>
                                 <td valign="middle" colspan="4">
-                                    <label>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</label>
+                                    <label><i>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</i></label>
                                 </td>
                             </tr>
                             <tr>
@@ -517,7 +517,7 @@ else
                             </tr>
                             <tr>
                                 <td valign="middle" colspan="4">
-                                    <label>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</label>
+                                    <label><i>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</i></label>
                                 </td>
                             </tr>
                             <tr>
