--- a/Views/TeachingAssistant/_Apply.cshtml
+++ b/Views/TeachingAssistant/_Apply.cshtml
@@ -29,18 +29,18 @@
     <div class="card-header border-bottom-0 pb-0">
         <div class="row">
             <div class="mb-3 col-md-4 col-12">
-                <label class="form-label">Đợt đăng ký</label>
+                <label class="form-label">Học kỳ</label>
                 <select id="hocky" class="form-select" data-width="100%">
                     @foreach (var item in lstHocKy)
                     {
 
                         if (id_hkGanNhat == item.ID)
                         {
-                            <option selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                            <option selected value="@item.ID">@item.TenHocKy</option>
                         }
                         else
                         {
-                            <option value="@item.ID">Học kỳ @item.TenHocKy</option>
+                            <option value="@item.ID">@item.TenHocKy</option>
                         }
                     }
                 </select>
