--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -126,7 +126,7 @@
                                 <li class="nav-item ">
                                     <a id="child-trogiang-reviewtask" class="child-nav-link nav-link "
                                        href="@Url.Action("Index", "ReviewTask")">
-                                        Đánh giá công việc
+                                        Kết quả đánh giá
                                     </a>
                                 </li>
                             </ul>
